--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 
         <hr>
 
-        <!-- Footer -->
+      <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
@@ -92,8 +92,7 @@
 							// and write that variable to the document.
 						
 					</script>
-					<br />
-					team&copy;CoScribe.it
+					CoScribe.it
 					</p>
                 </div>
             </div>
