--- a/contact.html
+++ b/contact.html
@@ -79,33 +79,31 @@
 					<p>
 						<h3>Dominic Decarlo</h3> <a href="ddecarlo@mail.sfsu.edu">ddecarlo@mail.sfsu.edu</a> <br /> Visual Communications <br / >
 					</p>
-					</div>
+					</div>  
+					<!-- Footer -->
+       				<footer>
+						<div class="row">
+							<div class="col-lg-12">
+								<p class="contact">
+								&copy; 
+								<script type="text/javascript"> 
+									var date = new Date(); // define variable date with function Date();
+									var Year = date.getFullYear(); document.write(Year); //define variable year
+										// and write that variable to the document.
+						
+								</script>
+								CoScribe.it
+								</p>
+							</div>
+						</div>
+        			</footer>
 			</div>
 		</div>
     </div>
 
         <hr>
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                	<p class="contact">
-                	&copy; 
-                    <script type="text/javascript"> 
-						var date = new Date(); // define variable date with function Date();
-						var Year = date.getFullYear(); document.write(Year); //define variable year
-							// and write that variable to the document.
-						
-					</script>
-					<br />
-					team&copy;CoScribe.it
-					</p>
-                </div>
-            </div>
-        </footer>
-
-    </div>
+   
     <!-- /.container -->
 
     <!-- jQuery -->
