--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>CoScribe It!</title>
+
+    <!-- favicon -->
+    <link href="images/IconCoscribe.jpg" rel=icon>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -105,11 +109,11 @@
         <header id="about" class="jumbotron hero-spacer">
             <h1>Subscribe better </h1>
             <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tempor condimentum mi, ac porta ante. Quisque placerat neque eget leo faucibus, non gravida ante tempus. Nam urna massa, cursus eget egestas ut, viverra id dolor. In tincidunt quam vel ornare mattis. Sed vitae porttitor massa, ac lobortis lacus. Phasellus molestie vulputate iaculis. Ut dapibus metus quis arcu gravida rhoncus. Nam quis molestie odio. Vestibulum vel est ut ipsum egestas mattis.
-</p>
-<p>
-Nunc at orci nunc. Aliquam erat volutpat. Nunc vehicula porta dui, non congue massa lacinia sed. Pellentesque faucibus sem ac eros aliquam finibus. Nunc eu consequat justo. Phasellus maximus fringilla mi, non porta erat egestas nec. Cras ut metus vitae nulla hendrerit ultricies quis eu dui.
-            </p>
+            CoScribe is a revolutionary platform that allows people to connect over subscription services. These services
+                can sometimes be either too expensive or require too long of a commitment. However, many subscriptions
+                allow for family or group deals that cost less per person. This is where CoScribe comes in. Users can
+                connect to others through music and frugality. Make sure to sign up to receive updates!</p>
+
         </header>
 
         <hr>
