--- a/index.html
+++ b/index.html
@@ -118,32 +118,38 @@
 
         <hr>
 
- <!-- SERVICES --!>
+ <!-- SERVICES -->
         <div class="row">
             <div class="col-md-4">
-                <h3 id="services">Goals</h3>
-                <p> Quisque aliquam libero id lacus gravida sagittis. Proin et consectetur libero. Etiam at sapien imperdiet, dignissim justo a, tristique arcu. Donec augue tellus, placerat at vehicula eget, semper suscipit tellus. Morbi vulputate, massa ac placerat dapibus, mi massa imperdiet enim, sit amet pellentesque erat nisl at arcu. Cras diam urna, efficitur eu lacinia et, vestibulum id erat. Aliquam nunc orci, posuere at felis quis, rutrum elementum dolor. Vivamus et varius risus. Pellentesque molestie nunc eget consectetur lobortis. Sed vitae augue eu purus ultrices scelerisque non eget ligula. Proin quis commodo massa. Donec quis luctus nulla, id sollicitudin urna. In ornare bibendum tellus nec congue.
+                <h3 id="services">Users</h3>
+                <p> Users will be able to save money through family & friends plans that are offered by subscription services
+                    as well as connect with people around the globe that share similar interests. Whether it's shows, music,
+                    or even phone plans, CoScribe creates new connections and saving money is the cherry on top.
                 </p>
             </div>
              <div class="col-md-4">
-                <h3>Goals</h3>
+                <h3>Companies</h3>
                 <p>
-                Suspendisse potenti. Vestibulum ut dignissim odio. Proin eget nisl id enim tempus aliquam. Ut efficitur velit et erat aliquam egestas. Nulla facilisi. Mauris dignissim viverra scelerisque. Aenean quis sem est. Sed dignissim ipsum et erat convallis, non pellentesque risus sodales. Quisque bibendum sit amet turpis vitae accumsan. Nam pellentesque felis non molestie consequat.
+                CoScribe allows subscription-based companies to draw in more users through family plans. In 2016, only 30% of Spotify's
+                    users were paid users and that made up 90% of Spotify's revenue. CoScribe allows companies such as Spotify to
+                    reach more users, and thus, generate more revenue.
                 </p>
             </div>
             
              <div class="col-md-4">
-                <h3>Goals</h3>
+                <h3>Mobile Carriers</h3>
                 <p>
-                Sed viverra finibus massa in varius. Vestibulum dictum orci sem. Vivamus eu risus dignissim, euismod mauris vitae, faucibus orci. Curabitur consectetur mauris non molestie mattis. Nunc blandit neque arcu, eu auctor lorem iaculis vel. Praesent blandit, velit non posuere egestas, nulla arcu rhoncus nisi, eu pretium tellus libero non leo. Maecenas fringilla condimentum lacus ut sodales.
+                Mobile carriers are often forgotten when people talk about subscription-based companies, but they are in fact
+                    the one of the largest subscription based systems in the world. These plans are often very costly for one or two people
+                    but end up becoming exponentially cheaper the more people on the plan.
                 </p>
             </div>   
-        </div> <!-- ./SERVICES --!>
+        </div> <!-- ./SERVICES -->
 
 	<hr />
 
 
-<!-- CONTACT --!>
+<!-- CONTACT -->
 	 <div id="contact" class="row">
 	 	<div class="col-lg-12">
 			<h1 class="text-center">The Team</h1>
